[package]
name = "rsha"
version = "0.1.0"
authors = ["Gerlof Fokkema <fokkema@redkiwi.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "^0.11"
serde = "^1.0.8"
serde_derive = "^1.0.8"
tokio = { version = "1.0.0", features = ["full", "time", "tracing"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.6.3", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2.7"
